# Amadeus

./: .env.example  .gitignore  AGENTS.md  ARCH.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GEMINI.md  IMPLEMENTATION_PLAN_BENCHMARK_PIPELINE.md  LICENSE  README.md  TEST_FLOW_PROGRESS.md  TEST_INFRASTRUCTURE_STATUS.md  TEST_REFACTOR_SUMMARY.md  TEST_RESULTS.md  clippy.toml  code_review.md  count-code.sh  pyproject.toml  verify.sh
.amadeus/: .settings.json  README.md  settings.example.json  settings.local.example.json
.amadeus/agents/: README.md
.amadeus/hooks/: README.md  local-hooks.json
.amadeus/mcp/: README.md  servers.example.json
.amadeus/skills/: README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
.opencode/plans/: openai-tool-result-fix.md
crates/amadeus-api/: Cargo.toml
crates/compaction/: Cargo.toml
crates/compaction/src/: lib.rs  trigger.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs  memory.rs  memory_file.rs  memory_json.rs  memory_session.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  error.rs  lib.rs  permissions.rs  prompts.rs  telemetry.rs
crates/core/src/agent/: compaction.rs  config.rs  events.rs  loop_agent.rs  manager.rs  messages.rs  mod.rs  orchestra.rs  profile.rs  supervisor.rs  team.rs  worker.rs
crates/core/src/assessment/: mod.rs
crates/core/src/audit/: mod.rs
crates/core/src/benchmark/: mock.rs  mod.rs  report.rs  runner.rs
crates/core/src/bridge/: mod.rs
crates/core/src/client/: anthropic.rs  openai.rs
crates/core/src/commands/: btw.rs  composer.rs  context.rs  mod.rs
crates/core/src/concurrency/: mod.rs
crates/core/src/core/: event.rs  id.rs  mod.rs
crates/core/src/hooks/: mod.rs  shell.rs
crates/core/src/mcp/: adapter.rs  client.rs  mod.rs
crates/core/src/policy/: mod.rs
crates/core/src/security/: command_runner.rs  mod.rs  path_policy.rs
crates/core/src/skills/: mod.rs  registry.rs
crates/core/src/test_utils/: file_system.rs  fixtures.rs  frame_text.rs  mod.rs  replay.rs  scenario.rs
crates/core/src/test_utils/testflow/: mod.rs  recorder.rs  types.rs
crates/core/src/tools/: bash.rs  file.rs  glob.rs  grep.rs  memory_tool.rs  mod.rs  peer.rs  platform.rs  registry.rs  schema.rs  sub_agent.rs  web.rs
crates/core/src/transcript/: mod.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/ids/: Cargo.toml
crates/ids/src/: lib.rs
crates/messages/: Cargo.toml
crates/messages/src/: lib.rs
crates/permissions/: Cargo.toml
crates/permissions/src/: lib.rs
crates/profiles/: Cargo.toml
crates/profiles/src/: lib.rs
crates/rag/: Cargo.toml
crates/rag/src/: chunker.rs  embedding.rs  lib.rs  tool.rs  vector_store.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent.rs  lib.rs  orchestra.rs  scheduler.rs  team.rs  worker.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/tui/src/ui/: api_client.rs  app.rs  colors.rs  event.rs  export.rs  headless.rs  mod.rs  repl.rs  vim.rs
crates/tui/src/ui/components/: approval.rs  completion.rs  diff.rs  footer.rs  input.rs  loading_indicator.rs  messages.rs  mod.rs  phrase_cycler.rs  sessions.rs  sidebar.rs  slash_dialog.rs  spinner.rs
crates/tui/src/ui/constants/: tips.rs
crates/tui/src/ui/scroll/: animated_scrollbar.rs  mod.rs
crates/tui/src/ui/themes/: ayu_dark.rs  dark_red.rs  default_dark.rs  default_light.rs  dracula.rs  github_dark.rs  github_light.rs  slate_red.rs  solarized_dark.rs  solarized_light.rs
docs/: AGENT_WORKFLOW_CHECKLIST.md  API_GUIDE.md  ARCHITECTURE-V3.md  ARCHITECTURE.md  BENCHMARK_PIPELINE.md  CITE_AND_PASTE_PLAN.md  COMPACTION.md  EVALUATION.md  HAI_TESTFLOW.md  HEADER_MINDMAP.md  HEADER_WEBUI.md  IMPLEMENTATION_MULTI_AGENT_TUI.md  INTEGRATION_GUIDE.md  MULTI_AGENT_TEAM_HARDENING_PLAN.md  PARITY.md  PROMPT_COMPARISON_CLAW_CODE_PARITY.md  REFACTOR-V2.md  REST_API.md  ROADMAP_PARITY.md  SDK_SCOPE.md  SOURCE_FILE_HEADERS.md  SUPERVISOR.md  TEST_ARCHITECTURE.md  TEST_FLOW.md  TMUX_TEST_FLOW.md  TOOLS.md  TUI_DESIGN_CLAUDE_CODE_VS_AMADEUS_EN.md  TUI_DESIGN_CLAUDE_CODE_VS_AMADEUS_ZH.md  TUI_GUIDE.md  TUI_TESTING.md  header_map.html  header_mindmap.mmd  memory-agent-briefing-20260503T162117Z.md
examples/: client_rest.sh  convert_session.rs  test_inline.rs  test_layout.rs
python-sdk/: README.md  pyproject.toml
python-sdk/amadeus_sdk/: __init__.py  agent.py  client.py  compaction.py  memory.py  memory_agent.py  prompts.py  rag.py  tools.py  types.py  ua_debug.py
python-sdk/examples/: basic_agent.py  memory_agent.py
refs/: .env.example  AGENTS.md  README.md  README_ja.md  README_zh.md  context-compaction-design.md  v0_bash_agent.py  v0_bash_agent_mini.py  v1_basic_agent.py  v2_todo_agent.py  v3_subagent.py  v4_skills_agent.py
runtime/: .gitignore  README.md
scripts/: amadeus-hotkey.skhd  amadeus-launch.sh  check_source_headers.py  embedding_proxy.py  generate_header_mindmap.py  generate_header_webui.py  openbench-quick.sh  run-benchmark.sh
skills/: multi-agent-dl-testing.md  multi-agent-dl-training.md  tui-tmux-debugging.md
src/: context.rs  error.rs  lib.rs  main.rs  prompts.rs
tests/: agent_integration_test.rs  agent_test.rs  anthropic_test.rs  api_test.rs  bash_test.rs  compaction_test.rs  config_test.rs  e2e_product_flow.rs  error_recovery_test.rs  file_lock_sessions_test.rs  file_test.rs  flows_test.rs  messages_test.rs  mock_functional_test.rs  mock_llm.rs  mod.rs  monitoring_harness_test.rs  openai_test.rs  p2p_test.rs  registry_test.rs  scenarios_test.rs  simulation_p2p.rs  streaming_scenarios_test.rs  stress_concurrent_test.rs  stress_memory_test.rs  stress_race_test.rs  stress_rapid_streaming_test.rs  stress_test.rs  sub_agent_test.rs  sub_agnet_test.rs  telemetry_test.rs  todo_test.rs  tool_approval_test.rs  tui_edge_cases_test.rs  tui_replay_test.rs  tui_snapshot_test.rs
(+307 files in other folders)
