[package]
name = "amadeus"
version = "0.1.0"
edition = "2021"
description = "AI Agent SDK - Core building blocks for building AI agents"
license = "MIT"
repository = "https://github.com/xxraincandyxx/Amadeus"
keywords = ["ai", "agent", "llm", "sdk", "openai"]
categories = ["api-bindings", "development-tools"]

[lib]
name = "amadeus"
path = "src/lib.rs"

[[bin]]
name = "amadeus"
path = "src/main.rs"
required-features = ["full"]

[features]
default = []

# Testing/Examples
api = ["axum", "tower", "tower-http", "tokio-util", "supervisor"]
tui = ["crossterm", "ratatui", "tui-textarea", "unicode-width", "colored", "lazy_static"]
test-utils = ["tempfile", "rustc_version_runtime"]

# Concurrency & Multi-Agent
concurrency = []
supervisor = ["concurrency"]
mesh = ["supervisor"]

# Context Management
context = []

# All features
full = ["api", "tui", "concurrency", "supervisor", "mesh", "context", "test-utils"]

[dependencies]
# Core dependencies
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
bytes = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Core primitives
uuid = { version = "1.10", features = ["v4", "serde"] }

# Optional: HTTP server
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
walkdir = "2.5"
glob = "0.3"
regex = "1.10"
url = "2.5"

# Optional: TUI
crossterm = { version = "0.27", features = ["event-stream"], optional = true }
ratatui = { version = "0.28", optional = true }
tui-textarea = { version = "0.6", optional = true }
unicode-width = { version = "0.2", optional = true }
colored = { version = "2.1", optional = true }
lazy_static = { version = "1.4", optional = true }
libc = "0.2.182"
rand = "0.8"
dirs = "5.0"

# Optional: Test utilities
tempfile = { version = "3.10", optional = true }
rustc_version_runtime = { version = "0.3", optional = true }

[dev-dependencies]
mockito = "1.4"
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3.10"
rand = "0.8"

[[example]]
name = "tui"
path = "examples/tui/main.rs"
required-features = ["tui"]

[[example]]
name = "server"
path = "examples/server/main.rs"
required-features = ["api"]

[[example]]
name = "test_inline"
path = "examples/test_inline.rs"
required-features = ["tui"]

[[example]]
name = "test_layout"
path = "examples/test_layout.rs"
required-features = ["tui"]

[[test]]
name = "agent_integration_test"
path = "tests/agent_integration_test.rs"
required-features = ["test-utils"]

[[test]]
name = "e2e_product_flow"
path = "tests/e2e_product_flow.rs"
required-features = ["supervisor"]
