[workspace]
members = ["crates/api", "crates/commands", "crates/compaction", "crates/config", "crates/context", "crates/core", "crates/hooks", "crates/permissions", "crates/prompts", "crates/skills", "crates/tui"]
resolver = "2"

[package]
name = "amadeus"
version = "0.1.0"
edition = "2021"
default-run = "amadeus"
description = "AI Agent SDK - Core building blocks for building AI agents"
license = "MIT"
repository = "https://github.com/xxraincandyxx/Amadeus"
keywords = ["ai", "agent", "llm", "sdk", "openai"]
categories = ["api-bindings", "development-tools"]

[lib]
name = "amadeus"
path = "src/lib.rs"

[[bin]]
name = "amadeus"
path = "src/main.rs"
required-features = ["full"]

[features]
default = []

# Testing/Examples
api = ["amadeus_core/api", "dep:amadeus_api", "team"]
tui = [
  "amadeus_core/tui",
  "dep:amadeus_tui",
  "dep:crossterm",
  "dep:ratatui",
  "concurrency",
]
test-utils = ["amadeus_core/test-utils", "amadeus_tui?/test-utils", "tempfile", "rustc_version_runtime"]

# Concurrency & Multi-Agent
concurrency = ["amadeus_core/concurrency"]
team = ["amadeus_core/team", "concurrency"]
supervisor = ["amadeus_core/supervisor", "concurrency"]
# Context Management
context = ["amadeus_core/context"]

# All features
full = ["api", "tui", "concurrency", "team", "supervisor", "context", "test-utils"]

[dependencies]
amadeus_core = { package = "core", path = "crates/core", default-features = false }
amadeus_api = { package = "api", path = "crates/api", optional = true, default-features = false }
amadeus_tui = { package = "tui", path = "crates/tui", optional = true, default-features = false }

# Core dependencies
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
bytes = "1.0"
crossterm = { version = "0.27", features = ["event-stream"], optional = true }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

walkdir = "2.5"
glob = "0.3"
regex = "1.10"
ratatui = { version = "0.28", optional = true }
url = "2.5"

libc = "0.2.182"
rand = "0.8"
dirs = "5.0"

# Optional: Test utilities
tempfile = { version = "3.10", optional = true }
rustc_version_runtime = { version = "0.3", optional = true }

[dev-dependencies]
mockito = "1.4"
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3.10"
rand = "0.8"

[[example]]
name = "tui"
path = "examples/tui/main.rs"
required-features = ["tui"]

[[example]]
name = "server"
path = "examples/server/main.rs"
required-features = ["api"]

[[example]]
name = "test_inline"
path = "examples/test_inline.rs"
required-features = ["tui"]

[[example]]
name = "test_layout"
path = "examples/test_layout.rs"
required-features = ["tui"]

[[test]]
name = "agent_integration_test"
path = "tests/agent_integration_test.rs"
required-features = ["test-utils"]

[[test]]
name = "e2e_product_flow"
path = "tests/e2e_product_flow.rs"
required-features = ["supervisor"]
