[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amadeus-sdk"
version = "0.1.0"
description = "Python SDK for the Amadeus AI agent framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["amadeus_sdk"]
