[package]
name = "compaction"
version = "0.1.0"
edition = "2021"
description = "Shared compaction model types for Amadeus"
license = "MIT"
repository = "https://github.com/xxraincandyxx/Amadeus"
publish = false

[lib]
name = "amadeus_compaction"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
