[package]
name = "context"
version = "0.1.0"
edition = "2021"
description = "Project context loading for Amadeus"
license = "MIT"
repository = "https://github.com/xxraincandyxx/Amadeus"
publish = false

[lib]
name = "amadeus_context"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
