[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "Core Amadeus SDK runtime, agents, tools, and shared harnesses"
license = "MIT"
repository = "https://github.com/xxraincandyxx/Amadeus"
keywords = ["ai", "agent", "llm", "sdk", "openai"]
categories = ["api-bindings", "development-tools"]

[lib]
name = "amadeus_core"
path = "src/lib.rs"

[features]
default = []
api = ["orchestra"]
tui = ["concurrency"]
test-utils = ["tempfile", "rustc_version_runtime"]
concurrency = []
orchestra = ["concurrency"]
# Legacy aliases retained for compatibility; prefer `orchestra`.
team = ["orchestra"]
supervisor = ["orchestra"]
context = []
full = ["api", "tui", "concurrency", "orchestra", "context", "test-utils"]

[dependencies]
amadeus_commands = { package = "commands", path = "../commands" }
amadeus_hooks = { package = "hooks", path = "../hooks" }
amadeus_config = { package = "config", path = "../config" }
amadeus_context = { package = "context", path = "../context" }
amadeus_compaction = { package = "compaction", path = "../compaction" }
amadeus_events = { package = "events", path = "../events" }
amadeus_messages = { package = "messages", path = "../messages" }
amadeus_ids = { package = "ids", path = "../ids" }
amadeus_permissions = { package = "permissions", path = "../permissions" }
amadeus_profiles = { package = "profiles", path = "../profiles" }
amadeus_prompts = { package = "prompts", path = "../prompts" }
amadeus_runtime = { package = "runtime", path = "../runtime" }
amadeus_skills = { package = "skills", path = "../skills" }
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
walkdir = "2.5"
glob = "0.3"
regex = "1.10"
url = "2.5"
libc = "0.2.182"
rand = "0.8"
dirs = "5.0"
tempfile = { version = "3.10", optional = true }
rustc_version_runtime = { version = "0.3", optional = true }

[dev-dependencies]
mockito = "1.4"
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3.10"
rand = "0.8"
