[package]
name = "rag"
version = "0.1.0"
edition = "2021"
description = "RAG (Retrieval-Augmented Generation) with embedding-based semantic search"
license = "MIT"
repository = "https://github.com/xxraincandyxx/Amadeus"
publish = false

[lib]
name = "amadeus_rag"
path = "src/lib.rs"

[dependencies]
amadeus_context = { package = "context", path = "../context" }
amadeus_core = { package = "core", path = "../core" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
