[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime coordination primitives for Amadeus"
license = "MIT"
repository = "https://github.com/xxraincandyxx/Amadeus"
keywords = ["ai", "agent", "runtime", "sdk"]
categories = ["development-tools"]

[lib]
name = "amadeus_runtime"
path = "src/lib.rs"

[dependencies]
amadeus_events = { package = "events", path = "../events" }
amadeus_ids = { package = "ids", path = "../ids" }
amadeus_profiles = { package = "profiles", path = "../profiles" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["sync"] }
